笨笨书屋网站样式精修

--- a/public/stylesheets/common/common.css
+++ b/public/stylesheets/common/common.css
@@ -1,1 +1,4 @@
-﻿.cover{width:110px; height: 147px;}
+﻿.coverImg{background: url(/images/bookshadow.png);}
+.paperCoverImg{background: url(/images/paperbookshadow.png); width: 144px; height: 190px;}
+.cover{width:160px; height: 214px;}
+.paperCover{width: 140px; height: 186px;}
