--- a/views/book/bookContent.jade
+++ b/views/book/bookContent.jade
@@ -1,33 +1,46 @@
 extends ../layout
 block content
 	.main-content
-		h2=name
 		.book#book
 			-if(book.bookContent != null)
-				h2
-					a#comment-btn(href='javascript:;',target='_blank') 我要写书评
+				h3.mb20
+					-if(user != null)
+						a#comment-btn.btn(href='javascript:;') 我要写书评
 				-for(var i = 0; i < book.bookContent.contents.length; ++i)
 					.page(data-page=i+1) !{book.bookContent.contents[i].content}
-						-if(user.name == book.publisher)
+						-if(user != null && user.name == book.publisher)
 							a(href='/book/upbookContent/'+book._id+'/'+(i+1)) 修改本页
-			-else if(user === null)
-					p 这本书的贡献者还没有来得及上传内容哦～（拦截信息没有显示）
-					a(href='') 提醒TA上传
-				-else
+			-else if(user != null)
 					p 这本书还没有内容
+				-else
+					p 这本书的贡献者还没有来得及上传内容哦～
 			-if(error)
 				p=error
-		.comment.none
-			.close#close ×
-			h3 我要为《#{book.name_zh}》写书评
-			form#comment(method='get',action='/book/comment')
-				input#bookId(type='hidden',value='#{book._id}',name='bookId')
-				input#userId(type='hidden',value='#{user._id}',name='userId')
-				label
-					标题：
-					input.title.selectize-input(type='text',name='title')
-				label
-					内容：
-					textarea.content.selectize-input(name='commentContent')
-				input#commit-btn.btn(type='button',value='提交')
+		-if(user != null)
+			.comment.none
+				.close#close ×
+				h3 我要为《#{book.name_zh}》写书评
+				form#comment(method='get',action='/book/comment')
+					input#bookId(type='hidden',value='#{book._id}',name='bookId')
+					input#userId(type='hidden',value='#{user._id}',name='userId')
+					label
+						标题：
+						input.title.selectize-input(type='text',name='title')
+					label
+						内容：
+						textarea.content.selectize-input(name='commentContent')
+					input#commit-btn.btn(type='button',value='提交')
+		script.
+			$(window).scroll(function(){
+				if($(document).scrollTop()>80){
+					$('#comment-btn').css({
+						position :'fixed',
+						top : '5px',
+						right : '30px',
+						zIndex : 2
+					}).addClass('top-animate');
+				}else{
+					$('#comment-btn').css({position:'static'}).removeClass('top-animate');
+				}
+			});
 		script(type='text/javascript',src='/javascripts/page/commitContent.js')
