--- a/views/book/paperBookCont.jade
+++ b/views/book/paperBookCont.jade
@@ -1,7 +1,7 @@
 ﻿extends ../layout
 block content
 	.main-content
-		h1=paperBook.name_zh
+		h1.title=paperBook.name_zh
 		-if(success)
 			h2.f18.fb=success
 		.paperBookCont
@@ -16,12 +16,12 @@ block content
 				.layout 装帧：#{paperBook.layout}
 				.isbn ISBN：#{paperBook.ISBN}
 		.paperBookContIntro
-			h2.title 作者简介......
+			h3.title 作者简介
 			.authorIntro
 				p #{paperBook.authorIntro}
-			h2.title 内容简介......
+			h3.title 内容简介
 			.contIntro
 				p #{paperBook.contIntro}
 		.tags 标签：
-			-for(var i = 0, j = paperBook.tags.length; i <= j; i++)
+			-for(var i = 0, j = paperBook.tags.length; i < j; i++)
 				span #{paperBook.tags[i]}
