multer req.filesexpress4.x之后不默认支持

--- a/views/user/reviewer.jade
+++ b/views/user/reviewer.jade
@@ -12,13 +12,14 @@ block content
 							-else
 								img.fl.avatar(src='/images/default/avatar.jpg')
 						.userInfo
-							a.mb10.name(href='/user/#{bookComment[i].userId.name}') #{bookComment[i].userId.name}
-							p.mb10 评论《#{bookComment[i].bookId.name_zh}》
+							a.name(href='/user/#{bookComment[i].userId.name}') #{bookComment[i].userId.name}
+							p 评论
+								a 《#{bookComment[i].bookId.name_zh}》
 							-if(bookComment[i].comment.content.length >= 45)
-								p.mb10.commentContent(data-content="#{bookComment[i].comment.content}") #{bookComment[i].comment.content.substr(0,44)}...
+								p.commentContent(data-content="#{bookComment[i].comment.content}") #{bookComment[i].comment.content.substr(0,44)}...
 									span.more.btn.none 展开
 							-else
-								p.mb10.commentContent(data-content="#{bookComment[i].comment.content}") #{bookComment[i].comment.content}
+								p.commentContent(data-content="#{bookComment[i].comment.content}") #{bookComment[i].comment.content}
 							p
-								|!{bookComment[i].useful}有用 #{bookComment[i].datetime}
+								|!{bookComment[i].useful}有用&nbsp;&nbsp;&nbsp;&nbsp;#{bookComment[i].datetime}
 		script(type='text/javascript',src='/javascripts/page/commitContent.js')
