--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,5 +1,5 @@
 body {
-  padding: 50px;
+  padding: 50px 30px;
   font-family: "Microsoft Yahei","冬青黑体简体中文 w3";
   letter-spacing:5;
   /*height: 1000px;*/
@@ -99,14 +99,12 @@ a {
 
 
 /*reviewer list*/
-.reviewer li{position: relative; width: 400px; display: inline-block; *display: inline; *zoom: 1; vertical-align: top;
-	margin-right: 20px;
-	padding: 10px;
-	margin-bottom: 30px;}
+.reviewer li{position: relative; width: 250px; display: inline-block; *display: inline; *zoom: 1; vertical-align: top; margin-right: 10px; padding: 10px; margin-bottom: 30px;}
 .reviewer li a.avatar{position: absolute;}
 .reviewer li a img{width: 96px; height: 96px; vertical-align: top;}
-.reviewer li .userInfo{margin-left: 110px; font-size: 14px;}
-.reviewer li .userInfo a.name{font-size: 16px; font-weight: bold;}
+.reviewer li .userInfo{margin-left: 110px;}
+.reviewer li .userInfo a.name{display: block; font-size: 16px; font-weight: bold;font-size: 14px; margin-bottom: 15px;}
+.reviewer li .userInfo p{font-size: 12px; margin-bottom: 5px;}
 .reviewer li .commentContent{position: relative;}
 .reviewer li .more{width: 33px; position: absolute;right: 0; top: 40px;}
 
@@ -116,6 +114,8 @@ a {
 .paperBook li .delete{position: absolute; right: 0; top: 0; cursor: pointer;}
 .paperBook li .paperCoverImg{float: left;}
 .paperBook li .info{margin-left: 155px; width: 160px; font-size: 14px;}
+.paperBook li .info h3{margin-bottom: 15px;}
+.paperBook li .info div{margin-bottom: 5px; font-size: 12px;}
 .tags{text-indent: 25px; background: url(/images/tag.png) no-repeat 0px 9px; margin-top: 20px; margin-bottom: 20px;}
 .tags span{display: inline-block; background: #B4BE7C; color: #fff; padding: 4px; text-indent: 0; margin-bottom: 20px;}
 
