--- a/views/book/paperBook.jade
+++ b/views/book/paperBook.jade
@@ -21,14 +21,14 @@ block content
 							-if(user && user.name == 'name')
 								br
 								a(href='/edit/#{paperBook[index]._id}') 修改新书信息[仅管理员可见]
-						.author 作者：#{paperBook[index].author}
+						.author.overdot 作者：#{paperBook[index].author}
 						.press 出版社：#{paperBook[index].press}
 						.releaseTime 出版年：#{paperBook[index].releaseTime}
 		script.
 			$('.delete').click(function(){
 				if(window.confirm('delete?')){
 					var bookId = $(this).attr('paper-id'),
-					$delete = $(this);
+							$delete = $(this);
 					$.get('/delete/'+bookId,{bookId:bookId},function(data){
 						if(data.ok){
 							alert('删除成功');
